[metadata]
name = asdf_schema_helpers
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = Testing and maintenance tools for ASDF schemas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asdf-format/asdf-schema-helpers
classifiers =
    Programming Language :: Python
    Framework :: Pytest

[options]
python_requires = >=3.6
zip_safe = false
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    pytest>=4.6
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    pytest_asdf_schema = pytest_asdf_schema.plugin

[tool:pytest]
minversion = 4.6

[flake8]
max-line-length = 120
